--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,9 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node index.ts",
+    "dev": "ts-node --esm index.ts"
   },
   "keywords": [],
   "author": "",
