--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,20 +1,16 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "type": "module",
-  "main": "index.ts",
   "scripts": {
-    "start": "ts-node index.ts",
     "dev": "ts-node --esm index.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.0",
     "ts-node": "^10.9.2",
